Show BMI Upper & Lower Bounds

--- a/Part B.ipynb
+++ b/Part B.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "70720487-c033-407f-a28d-d237e3d5696e",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "b3977fc0-9a15-4c80-94b3-51870fe1b708",
    "metadata": {},
    "outputs": [],
    "source": [
-    "diabetes_dataset_filepath = 'Data & AI  PAN Datathon Nov 24/diabetes_data.csv'\n",
+    "diabetes_dataset_filepath = '../Data & AI  PAN Datathon Nov 24/diabetes_data.csv'\n",
     "\n",
     "# Read the CSV into a Pandas DataFrame\n",
     "diabetes_data = pd.read_csv(diabetes_dataset_filepath)"
@@ -41,14 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "a97ea454-803c-46bb-8cd5-e699a2d29a01",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -360,7 +355,7 @@
        "[100000 rows x 16 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,25 +788,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "be12f5b2-8242-4db2-990b-21612be7f1fa",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "BMI Upper Bound: 43.15\n",
+      "BMI Lower Bound: 10.75\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 575 entries, 88 to 99788\n",
       "Data columns (total 16 columns):\n",
       " #   Column                      Non-Null Count  Dtype  \n",
       "---  ------                      --------------  -----  \n",
-      " 0   gender                      484 non-null    object \n",
+      " 0   gender                      455 non-null    object \n",
       " 1   age                         445 non-null    float64\n",
       " 2   hypertension                443 non-null    float64\n",
       " 3   diabetes_pedigree_function  464 non-null    float64\n",
@@ -824,7 +816,7 @@
       " 10  physical_activity_level     465 non-null    object \n",
       " 11  sleep_duration              450 non-null    float64\n",
       " 12  stress_level                463 non-null    object \n",
-      " 13  pregnancies                 508 non-null    float64\n",
+      " 13  pregnancies                 457 non-null    float64\n",
       " 14  alcohol_consumption         484 non-null    object \n",
       " 15  diabetes                    469 non-null    float64\n",
       "dtypes: float64(9), object(7)\n",
@@ -839,9 +831,10 @@
     "IQR = Q3 - Q1\n",
     "lower_bound = Q1 - 1.5 * IQR\n",
     "upper_bound = Q3 + 1.5 * IQR\n",
+    "print(f'BMI Upper Bound: {round(upper_bound, 2)}')\n",
+    "print(f'BMI Lower Bound: {round(lower_bound, 2)}')\n",
     "bmi_outliers = diabetes_data[(diabetes_data['BMI'] < lower_bound) | (diabetes_data['BMI'] > upper_bound)]\n",
     "bmi_outliers.info()\n",
-    "\n",
     "\n",
     "# Function to remove outliers\n",
     "def remove_outliers(df, column):\n",
